# Satellite-Telemetry-Visualization-and-Communication-Monitor

./: README.md  package-lock.json  package.json  pyproject.toml  satellite-tracker.db  satellite-tracker.db-shm  satellite-tracker.db-wal
attached_assets/: Pasted--feature-name-Cyber-Geospatial-Command-Interface-Module-type-Advanced-frontend-visu-1752022092782_1752022092783.txt  Pasted--feature-name-Cyberpunk-Live-Satellite-Threat-Map-visual-style-base-colors--1752022751613_1752022751614.txt  Pasted--project-name-Cyberpunk-Real-Time-Satellite-Tracker-description-A-full-stack-applic-1752020885406_1752020885407.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: advanced-leaflet-map.tsx  advanced-three-globe.tsx  console-log.tsx  cyber-console.tsx  filter-sidebar.tsx  leaflet-map.tsx  satellite-details.tsx  three-globe.tsx  top-status-bar.tsx
client/src/hooks/: use-websocket.tsx
client/src/lib/: orbital-calculations.ts  satellite-data.ts
client/src/pages/: satellite-tracker.tsx
python_backend/: threat_analyzer.py  threat_api.py
server/: database-storage.ts  db.ts  index.ts  python-bridge.ts  routes.ts  storage.ts
shared/: schema.ts
